5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1637_2703.log
== TEST (2019-04-09 10:27:39) 
-- CODE:
n = int(input("escreva sua idade: ")
		  
if(18>n):
  print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if(18>n):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:54) 
-- CODE:
n = int(input("escreva sua idade: ")
		  
if (18>n):
  print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (18>n):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:50) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (18 > idade):
   print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (18 > idade):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:31) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (18 >= idade):
   print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (18 >= idade):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:14) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18):
   print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:38) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18) : 
   print("eleitor")
else:
	  print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade >= 18) : 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:32:01) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18) : 
   print("eleitor")
				
else:
	  print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade >= 18) : 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:37:37) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18) : 
    print("eleitor")
				
else:
	  print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade >= 18) : 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:37:43) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18): 
    print("eleitor")
				
else:
	  print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade >= 18): 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:54) 
-- CODE:
idade = int(input("escreva sua idade: ")
		  
if (idade >= 18): 
                 print("eleitor".lower())
				
else:
	  print("nao_eleitor".lower())
-- ERROR:
File "XXXX", line 3
    if (idade >= 18): 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:41:15) 
-- CODE:
idade = int(input("escreva sua idade: "))
		  
if (idade >= 18): 
    print("eleitor".lower())
				
else:
	  print("nao_eleitor".lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:41:20) 
-- CODE:
idade = int(input("escreva sua idade: "))
		  
if (idade >= 18): 
    print("eleitor".lower())
				
else:
	  print("nao_eleitor".lower())
-- EXECUTION TIME:
0.16885
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
